[package]
name = "saqif"
version = "0.1.0"
authors = ["Rashyad <rashyadarfan@gmail.com>"]
edition = "2021"
description = "A simple application to take screenshots of given URLs"
repository = "https://github.com/rashyad/saqif"
license = "MIT"
keywords = ["headless_chrome", "screenshots", "image", "tools"]
categories = ["accessibility", "command-line-interface"]

[lib]
name = "saqif"
path = "src/lib.rs"

[[bin]]
name = "saqif"
path = "bin/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4.37"
druid = "0.8.3"
druid-widget-nursery = "0.1.0"
headless_chrome = "1.0.9"

